myapp/templates/bloggin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloggin
spec:
  selector:
    matchLabels:
      app: bloggin
  template:
    metadata:
      labels:
        app: bloggin
    spec:
      containers:
      - name: finalbloggin
        image: healerkay/bloggin:2703
        ports:
        - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: bloggin-service
spec:
  selector:
    app: bloggin
  ports:
  - port: 80
    targetPort: 80

  # type: LoadBalancer
