myapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
     nginx.ingress.kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: blog.bestofcreativity.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-service 
            port:
              number: 80
    
  - host: php.bestofcreativity.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80

  tls:
  - hosts:
    - blog.bestofcreativity.online
    - php.bestofcreativity.online
    secretName: myapp-tls
